# cosmetic-seo-adk

./: .dockerignore  .gitignore  DEPLOYMENT_READINESS_REPORT.md  Dockerfile  Dockerfile.simple  FINAL_README.md  FIX_SUMMARY.md  MODEL_UPDATE_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  SYSTEM_STATUS_REPORT.md  ULTRA_STEALTH_UPGRADE_REPORT.md  demo_test.py  docker-compose.simple.yml  docker-compose.yml  fast_workflow.py  find_correct_urls.py  gratis_scraper.py  main.py  main_real.py  manual_url_inspector.py  pyproject.toml  quick_test.py  real_scraper.py  requirements.txt  requirements_minimal.txt  run_fast_app.py  run_sample.py  simple_demo.py  simple_real_scraper.py  simple_requirements.txt  simple_test.py  simple_test_no_adk.py  simple_web_app.py  standalone_test.py  test_agent_updates.py  test_all_categories.py  test_category_filtering.py  test_deep_analysis.py  test_dynamic_urls.py  (+11 more)
agents/: __init__.py  ai_selector_engine.py  analyzer_agent.py  base_tool.py  config.py  constants.py  dynamic_url_mapper.py  error_recovery_system.py  modern_scraper_agent.py  quality_agent.py  scout_agent.py  scraper_agent.py  seo_agent.py  smart_session_manager.py  storage_agent.py  ultra_stealth_browser.py  utils.py  workflow_logger.py
config/: models.py  modern_sites.py  sites.py
data/web_results/: demo_krem_1751978875.csv  demo_krem_1751978875.json  demo_maske_1751979919.csv  demo_maske_1751979919.json
templates/: index.html  monitoring.html
